sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: not found: value int
  int etat=1;
  ^AlgBubbleSort1:4: error: not found: value etat
  while(etat==0){
        ^AlgBubbleSort1:5: error: not found: value etat
    etat=0;
    ^AlgBubbleSort1:9: error: not found: value etat
        etat=1;
        ^